kubernetes/others/mongo-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongodb-ingress
spec:
  rules:
  - host: mgdbexprs.com
    http:
      paths:
      - backend:
        serviceName: mongo-express-service
        servicePort: 8081
